--- a/templates/layouts/blockhopper.html
+++ b/templates/layouts/blockhopper.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/css/estilos.css"> <!-- Carga el CSS -->    
     <title>Document</title>
 </head>
-<body>
-    
+<body onload="startGame()">
+    <br>
+    <h1 class="titulo">Block Hopper</h1>
+    <script src="/static/js/scripts.js"></script> 
 </body>
 </html>
