--- a/templates/layouts/blockhopper.html
+++ b/templates/layouts/blockhopper.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<<<<<<< HEAD
-    <link rel="stylesheet" href="/static/css/estilos.css"> <!-- Carga el CSS -->
+    <!-- Importación de estilos CSS -->
+    <link rel="stylesheet" href="/static/css/estilos.css"> 
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -16,22 +16,24 @@
     <title>Document</title>
 </head>
 
+<!-- Body del Html desde donde se ejecutara el juego usando canvas -->
 <body onload="startGame()">
     <br>
-    <div class="alert alert-primary" role="alert">
-        Use la barra espaciadora para jugar
-      </div>
-    <h1 class="titulo">Block Hopper</h1>
+    <!-- Nombre del juego colocado con estilos de color Bootstrap -->
+    <div class="TituloJuego">
+        <h1 class="p-3 mb-2 bg-primary text-white titulo">Block Hopper</h1>
+    </div>
+
+    <!-- Alerta con estilos Bootstrap para dar un mensaje a los usuarios -->
+    <div class="alerta alert alert-primary" role="alert">
+       Este juego ha sido desarrollado con JavaScript. <br>
+       Esperamos que te diviertas mucho
+    </div>
+
+    <!-- Importación de funciones de archivo JavaScript -->
     <script src="/static/js/scripts.js"></script>
-=======
-    <link rel="stylesheet" href="/static/css/estilos.css"> <!-- Carga el CSS -->    
-    <title>Document</title>
-</head>
-<body onload="startGame()">
-    <br>
-    <h1 class="titulo">Block Hopper</h1>
-    <script src="/static/js/scripts.js"></script> 
->>>>>>> af75a6c0820b933544727b11e0755aef759b928e
+
+
 </body>
 
 </html>
