--- a/templates/static/css/estilos.css
+++ b/templates/static/css/estilos.css
@@ -1,7 +1,15 @@
 canvas {
     border: 2px solid black;
-    background-color: #4fb5dd;
-    background-color: #87ceeb;
-
+    background-color: #4aac90;
 }
 
+.TituloJuego{
+    padding: 15px;
+    width: 500px;
+    text-align: center;
+}
+
+.alerta{
+    width: 600px;
+    padding-left: 15px;
+}
