--- a/templates/layouts/blockhopper.html
+++ b/templates/layouts/blockhopper.html
@@ -13,7 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Block Jumper</title>
 </head>
 
 <!-- Body del Html desde donde se ejecutara el juego usando canvas -->
@@ -21,7 +21,7 @@
     <br>
     <!-- Nombre del juego colocado con estilos de color Bootstrap -->
     <div class="TituloJuego">
-        <h1 class="p-3 mb-2 bg-primary text-white titulo">Block Hopper</h1>
+        <h1 class="p-3 mb-2 bg-primary text-white titulo">Block Jumper</h1>
     </div>
 
     <!-- Alerta con estilos Bootstrap para dar un mensaje a los usuarios -->
